public/css/components.css
div.component-content {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: center;
  align-items: flex-start;
  padding: 0rem 0.5rem;
  color: black;
}

div.component-name {
  display: flex;
  margin: 0rem;
  width: 100%;
  justify-content: flex-start;
  align-items: center;
}

div.component-root-data {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
  width: 100%;
  margin: 0rem;
}

label.component-title-label {
  display: block;
  width: 100%;
  text-align: left;
}

.component-title-selector {
  width: 15rem;
  height: 2rem;
  font-size: 1rem;
  color: black;
  background-color: white;
  border-radius: 5px;
  border: 1px solid black;
  box-shadow: 2px 2px 5px black;
}

.component-title-attribute {
  width: 100%;
}

.component-title-auxiliary {
  width: 100%;
}

label.component-image-label {
  display: block;
  width: 100%;
  text-align: left;
}

.component-image-selector {
  width: 15rem;
  height: 2rem;
  font-size: 1rem;
  color: black;
  background-color: white;
  border-radius: 5px;
  border: 1px solid black;
  box-shadow: 2px 2px 5px black;
}

.component-image-attribute {
  width: 100%;
}

.component-image-auxiliary {
  width: 100%;
}

label.component-price-label {
  display: block;
  width: 100%;
  text-align: left;
}

.component-price-selector {
  width: 15rem;
  height: 2rem;
  font-size: 1rem;
  color: black;
  background-color: white;
  border-radius: 5px;
  border: 1px solid black;
  box-shadow: 2px 2px 5px black;
}

.component-price-attribute {
  width: 100%;
}

.component-price-auxiliary {
  width: 100%;
}

